# latency-lens

./: .gitignore  LICENSE  README.md  pyproject.toml
latency_lens/: __init__.py  ai_advisor.py  analyzer.py  cli.py  collector.py  dashboard.py  exporters.py  middleware.py
latency_lens/templates/: dashboard.html
