[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latency-lens"
version = "1.0.0"
description = "Auto-instrument APIs and show performance maps with AI-powered suggestions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "flask>=3.0.0",
    "openai>=1.35.0",
]

[project.scripts]
latency-lens = "latency_lens.cli:cli"

[tool.setuptools.packages.find]
include = ["latency_lens*"]
